# sample

./: CMakeLists.txt
.github/workflows/: android-build.yml  build-android-lib.yml  build-lib-android.yml
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml  ~ew shortcut.tmp
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/example/myapp/: MainActivity.java  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  mylib.cpp  version.h
